# sharejoy_be

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
app/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  apps.py  managers.py  models.py
core/management/commands/: init_admin.py  wait_for_db.py
core/migrations/: 0001_initial.py
sharejoy/: apps.py  serializers.py  urls.py  views.py
